# xtensa-hal

./: LICENSE  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  import-core.sh
include/: Makefile.am  Makefile.in
src/hal/: Makefile.am  Makefile.in  Makefile.src
