nobase_include_HEADERS = \
	machine/xtensa-hal.h \
	xtensa/cacheasm.h \
	xtensa/cacheattrasm.h \
	xtensa/config/core.h \
	xtensa/core-macros.h \
	xtensa/coreasm.h \
	xtensa/corebits.h \
	xtensa/hal.h \
	xtensa/simboard.h \
	xtensa/simcall-errno.h \
	xtensa/simcall-fcntl.h \
	xtensa/simcall.h \
	xtensa/specreg.h \
	xtensa/xdm-regs.h \
	xtensa/xtensa-versions.h \
	xtensa/xtensa-xer.h \
	xtensa/xtruntime-core-state.h \
	xtensa/xtruntime-frames.h \
	xtensa/xtruntime.h

install-data-hook:
	cp -a $(srcdir)/arch $(DESTDIR)/$(includedir)
